# InputShareUSB

./: .gitignore  Cargo.toml  Readme.md  inputshare-client.json  inputshare_client.toml  inputshare_server.toml  justfile  rustfmt.toml  start_server.sh
.cargo/: config.toml
.github/workflows/: release.yml
inputshare-client/: Cargo.toml  build.rs
inputshare-client/src/: client.rs  config.rs  conversions.rs  error.rs  gui.rs  hid.rs  hook.rs  hookv2.rs  inputhook.rs  keys.rs  main.rs  main_old.rs  model.rs  popup.rs  runtime.rs  send.rs  sender.rs  theme.rs  windows.rs  winsock.rs
inputshare-client/src/ui/: actions.rs  button.rs  config.rs  icons.rs  key_tester.rs  list.rs  mod.rs  popup.rs  status.rs  system_menu.rs
inputshare-client/src/ui/widget/: button.rs  icons.rs  list.rs  mod.rs  theme.rs
inputshare-client/src/utils/: conversions.rs  error.rs  hook.rs  keyset.rs  mod.rs
inputshare-common/: Cargo.toml
inputshare-common/src/: lib.rs
inputshare-esp32/: Cargo.toml
inputshare-esp32/src/: main.rs
inputshare-gui/: Cargo.toml
inputshare-gui/src/: client.rs  config.rs  hid.rs  main.rs  pages.rs
inputshare-gui/src/pages/: default.rs  settings.rs
inputshare-server/: Cargo.toml
inputshare-server/scripts/: copy_server.sh  enable_hid.service  enable_hid.sh  inputshare_server.service  install_hid_service.sh  install_server.sh  update_server.sh
inputshare-server/src/: args.rs  config.rs  configfs.rs  devices.rs  main.rs  receiver.rs  util.rs
lib/egui-d3d11/: Cargo.toml  Readme.md  build.rs
lib/egui-d3d11/src/: lib.rs  painter.rs  shader.hlsl  winit.rs
lib/inputshare-common/: Cargo.toml
lib/inputshare-common/src/: lib.rs
lib/winsock2_extensions/: Cargo.toml  Readme.md
lib/winsock2_extensions/src/: lib.rs
lib/yawi/: Cargo.toml  Readme.md
lib/yawi/examples/: hooks.rs  send_input.rs
lib/yawi/src/: enums.rs  hook.rs  lib.rs  message.rs  query.rs  send.rs
yawi/: Cargo.toml
yawi/examples/: hooks.rs
yawi/src/: enums.rs  error.rs  hook.rs  lib.rs  message.rs  send.rs
