[workspace]
resolver = "2"
members = [
    "inputshare-client",
    "inputshare-server",
    "lib/inputshare-common",
    "lib/yawi",
    "inputshare-esp32"
]

[profile.release]
lto = true
split-debuginfo = "packed"
#strip="symbols"

[profile.release-esp]
inherits = "release"
lto = false
split-debuginfo = "off"
opt-level = "s"

[profile.dev-esp]
inherits = "dev"
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"