[package]
name = "inputshare-client"
version = "2.3.0"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = { version = "1", features = ["backtrace"] }
error-tools = { git = "https://github.com/sidit77/error-tools.git", features = ["log", "gui"] }

tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures-lite = "1"
quinn = "0.9"
rustls = { version = "0.20", default-features = false, features = ["quic", "dangerous_configuration"] }

serde = { version = "1", features = ["derive"] }
druid = { version = "0.8", features = ["im", "serde"] }

inputshare-common = { path = "../lib/inputshare-common" }
yawi = {path = "../lib/yawi", features = ["serde", "druid"]}

# serde_json = "1.0"
# winapi = { version = "0.3", features = ["winuser", "minwindef"] }
# byteorder = "1"

# native-windows-gui = "1.0"
# native-windows-derive = "1.0"

# winsock2_extensions = { path = "../lib/winsock2_extensions" }
# egui-d3d11 = { path = "../lib/egui-d3d11", features = ["egui-winit"]}

# udp_connections = {git = "https://github.com/sidit77/udp_connections.git"}

# [dependencies.windows]
# version = "0.46"
# features = [
#     "Win32_Foundation",
#     "Win32_Graphics_Direct3D11",
#     "Win32_Graphics_Direct3D",
#     "Win32_Graphics_Dxgi",
#     "Win32_Graphics_Dxgi_Common",
#     "Win32_System_Com",
#     "Win32_UI_HiDpi"
# ]

[build-dependencies]
tauri-winres = "0.1"