[package]
name = "inputshare-client"
version = "3.0.1"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
eyre = "0.6"
indenter = "0.3"
error-tools = { git = "https://github.com/sidit77/error-tools.git", features = ["gui"] }

tokio = { version = "1", features = ["full"] }
bytes = "1"
parking_lot = "0.12"
quinn = "0.9"
rustls = { version = "0.20", default-features = false, features = ["quic", "dangerous_configuration"] }
mdns-sd = "0.7"

serde = { version = "1", features = ["derive"] }
ron = "0.8"
directories = "5"
byteorder = "1"
once_cell = "1"
druid = { version = "0.8", features = ["serde", "im"] }
druid-material-icons = "0.2"

inputshare-common = { path = "../lib/inputshare-common" }
yawi = {path = "../lib/yawi", features = ["serde", "druid"]}

[build-dependencies]
tauri-winres = "0.1"