[package]
name = "inputshare-gui"
version = "0.1.0"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3.0"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"