[package]
name = "inputshare-server"
version = "2.3.0"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
mio = {version = "0.8", features = ["os-poll", "net"]}
mio-signals = "0.2.0"
byteorder = "1"
vec_map = "0.8.2"
bitflags = "1.3"
clap = { version = "4.1", features = ["derive"] }
system_shutdown = "4.0"
inputshare-common = { path = "../lib/inputshare-common" }
udp_connections = {git = "https://github.com/sidit77/udp_connections.git"}