[package]
name = "inputshare-server"
version = "2.3.0"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
quinn = "0.9"
rustls = { version = "0.20", default-features = false, features = ["quic"] }
rcgen = "0.10"
byteorder = "1"
bytes = "1"
bitflags = "2"
clap = { version = "4.1", features = ["derive"] }
inputshare-common = { path = "../lib/inputshare-common" }

# log = "0.4"
# env_logger = "0.10"
# anyhow = "1.0"
# mio = {version = "0.8", features = ["os-poll", "net"]}
# mio-signals = "0.2.0"
# byteorder = "1"
# vec_map = "0.8.2"
# bitflags = "1.3"
# clap = { version = "4.1", features = ["derive"] }
# system_shutdown = "4.0"

# udp_connections = {git = "https://github.com/sidit77/udp_connections.git"}