[package]
name = "inputshare-server"
version = "3.0.1"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
quinn = "0.9"
rustls = { version = "0.20", default-features = false, features = ["quic"] }
rcgen = "0.10"
byteorder = "1"
bytes = "1"
bitflags = "2"
clap = { version = "4.1", features = ["derive"] }
mdns-sd = "0.7"
inputshare-common = { path = "../lib/inputshare-common" }
