[package]
name = "egui-d3d11"
version = "0.21.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
egui = { version = "0.21", features = ["bytemuck"] }
log = "0.4"
egui-winit = { version = "0.21", optional = true }

[dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
]

[build-dependencies]
windows = {version = "0.44", features=["Win32_Graphics_Direct3D_Fxc"]}