[package]
name = "yawi"
version = "0.1.0"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "windef", "minwindef", "basetsd"] }
num_enum = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"]  }
log = "0.4"