[package]
name = "yawi"
version = "0.1.0"
authors = ["sidit77 <sidit77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5"
tracing = "0.1"
serde = { version = "1", optional = true, features = ["derive"]  }
druid = { version = "0.8", optional = true }

[dependencies.windows]
version = "0.46"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]